--- a/package.json
+++ b/package.json
@@ -14,9 +14,21 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "@emotion/core": "^10.0.35",
+    "@emotion/styled": "^10.0.27",
+    "emotion": "^10.0.27",
+    "emotion-theming": "^10.0.27",
     "gatsby": "^2.24.85",
+    "gatsby-plugin-mdx": "^1.2.52",
+    "gatsby-source-filesystem": "^2.3.37",
+    "gatsby-transformer-remark": "^2.8.47",
+    "prism-react-renderer": "^1.1.1",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-feather": "^2.0.8",
+    "react-flexbox-grid": "^2.1.2",
+    "react-github-btn": "^1.2.0",
+    "react-helmet": "^6.1.0"
   },
   "devDependencies": {
     "prettier": "2.1.2"
