--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
     "emotion-theming": "^10.0.27",
     "gatsby": "^2.24.85",
     "gatsby-plugin-mdx": "^1.2.52",
+    "gatsby-plugin-react-helmet": "^3.3.14",
+    "gatsby-plugin-sharp": "^2.6.43",
+    "gatsby-remark-images": "^3.3.40",
+    "gatsby-remark-relative-images": "^2.0.2",
     "gatsby-source-filesystem": "^2.3.37",
     "gatsby-transformer-remark": "^2.8.47",
     "prism-react-renderer": "^1.1.1",
