--- a/package.json
+++ b/package.json
@@ -13,13 +13,12 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
-    "@emotion/core": "^10.0.35",
-    "@emotion/styled": "^10.0.27",
+    "@emotion/css": "^11.0.0",
+    "@emotion/react": "^11.1.1",
+    "@emotion/styled": "^11.0.0",
     "@mdx-js/mdx": "^1.6.19",
     "@mdx-js/react": "^1.6.19",
     "@svgr/webpack": "^5.4.0",
-    "emotion": "^10.0.27",
-    "emotion-theming": "^10.0.27",
     "gatsby": "^2.24.85",
     "gatsby-plugin-manifest": "^2.5.2",
     "gatsby-plugin-mdx": "^1.2.52",
