--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-helmet": "^6.1.0"
   },
   "devDependencies": {
+    "@emotion/babel-plugin": "^11.1.2",
     "prettier": "2.1.2"
   },
   "repository": {
