--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1",
+    "delete-maps": "rimraf ./public/**.map"
   },
   "dependencies": {
     "@emotion/css": "^11.0.0",
@@ -42,7 +43,8 @@
   },
   "devDependencies": {
     "@emotion/babel-plugin": "^11.1.2",
-    "prettier": "2.1.2"
+    "prettier": "2.1.2",
+    "rimraf": "^3.0.2"
   },
   "repository": {
     "type": "git",
