--- a/package.json
+++ b/package.json
@@ -29,9 +29,10 @@
     "gatsby-plugin-svgr": "^2.0.2",
     "gatsby-remark-images": "^3.3.40",
     "gatsby-remark-katex": "^3.7.0",
+    "gatsby-remark-prismjs": "^3.11.0",
     "gatsby-remark-relative-images": "^2.0.2",
     "gatsby-source-filesystem": "^2.3.37",
-    "prism-react-renderer": "^1.1.1",
+    "prismjs": "^1.23.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-feather": "^2.0.8",
