--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "gatsby": "^2.29.0",
     "gatsby-plugin-manifest": "^2.5.2",
     "gatsby-plugin-mdx": "^1.2.52",
+    "gatsby-plugin-offline": "^3.9.0",
     "gatsby-plugin-react-helmet": "^3.3.14",
+    "gatsby-plugin-remove-serviceworker": "^1.0.0",
     "gatsby-plugin-sass": "^3.0.0",
     "gatsby-plugin-sharp": "^2.6.43",
     "gatsby-plugin-svgr": "^2.0.2",
