--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gatsby-plugin-manifest": "^2.5.2",
     "gatsby-plugin-mdx": "^1.2.52",
     "gatsby-plugin-offline": "^3.9.0",
+    "gatsby-plugin-preact": "^4.6.0",
     "gatsby-plugin-react-helmet": "^3.3.14",
     "gatsby-plugin-remove-serviceworker": "^1.0.0",
     "gatsby-plugin-sass": "^3.0.0",
@@ -34,6 +35,8 @@
     "gatsby-remark-prismjs": "^3.11.0",
     "gatsby-remark-relative-images": "^2.0.2",
     "gatsby-source-filesystem": "^2.3.37",
+    "preact": "^10.5.12",
+    "preact-render-to-string": "^5.1.12",
     "prismjs": "^1.23.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
