feat: add progress bar

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "gatsby-remark-prismjs": "^3.11.0",
     "gatsby-source-filesystem": "^2.3.37",
     "linaria": "^3.0.0-beta.1",
+    "nprogress": "^0.2.0",
     "preact": "^10.5.12",
     "preact-render-to-string": "^5.1.12",
     "prismjs": "^1.23.0",
