--- a/.github/workflows/auto-deploy.yml
+++ b/.github/workflows/auto-deploy.yml
@@ -15,6 +15,7 @@ jobs:
     runs-on: [ubuntu-latest]
     env:
       NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
+      NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
 
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
