--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "react-dom": "^16.12.0",
     "react-feather": "^2.0.8",
     "react-helmet": "^6.1.0",
+    "react-use": "^17.2.4",
+    "resize-observer-polyfill": "^1.5.1",
     "sass": "^1.32.4"
   },
   "devDependencies": {
