--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "gatsby-plugin-preact": "^4.6.0",
     "gatsby-plugin-react-helmet": "^3.3.14",
     "gatsby-plugin-remove-serviceworker": "^1.0.0",
+    "gatsby-plugin-robots-txt": "^1.6.9",
     "gatsby-plugin-sass": "^3.0.0",
     "gatsby-plugin-sharp": "^2.6.43",
     "gatsby-plugin-sitemap": "^2.12.0",
