--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-feather": "^2.0.10",
     "react-helmet": "^6.1.0",
     "react-use": "^17.4.0",
+    "remark-gfm": "^1.0.0",
     "remark-math": "^4.0.0",
     "resize-observer-polyfill": "^1.5.1",
     "sass": "^1.55.0"
@@ -62,6 +63,7 @@
   "devDependencies": {
     "eslint": "^8.24.0",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-mdx": "^2.0.5",
     "netlify-cli": "^12.0.0",
     "prettier": "^2.7.1",
