--- a/package.json
+++ b/package.json
@@ -26,19 +26,19 @@
     "not iOS <= 10.2"
   ],
   "dependencies": {
-    "@linaria/core": "^4.1.2",
-    "@linaria/react": "^4.1.3",
+    "@linaria/core": "^4.2.10",
+    "@linaria/react": "^4.3.8",
     "@matejmazur/react-katex": "^3.1.3",
     "@mdx-js/react": "^2.3.0",
     "@svgr/webpack": "^8.0.1",
     "gatsby": "^5.10.0",
-    "gatsby-plugin-linaria": "^4.0.0",
+    "gatsby-plugin-linaria": "^4.0.2",
     "gatsby-plugin-manifest": "^5.10.0",
     "gatsby-plugin-mdx": "^5.10.0",
     "gatsby-plugin-offline": "^6.10.0",
     "gatsby-plugin-react-helmet": "^6.10.0",
     "gatsby-plugin-remove-serviceworker": "^1.0.0",
-    "gatsby-plugin-robots-txt": "^1.7.1",
+    "gatsby-plugin-robots-txt": "^1.8.0",
     "gatsby-plugin-sass": "^6.10.0",
     "gatsby-plugin-sharp": "^5.10.0",
     "gatsby-plugin-sitemap": "^6.10.0",
@@ -47,7 +47,7 @@
     "gatsby-remark-prismjs": "^7.10.0",
     "gatsby-source-filesystem": "^5.10.0",
     "katex": "^0.16.7",
-    "linaria": "^4.1.3",
+    "linaria": "^4.1.17",
     "nprogress": "^0.2.0",
     "prismjs": "^1.29.0",
     "react": "^18.2.0",
@@ -55,17 +55,18 @@
     "react-feather": "^2.0.10",
     "react-helmet": "^6.1.0",
     "react-use": "^17.4.0",
-    "remark-gfm": "^1.0.0",
-    "remark-math": "^4.0.0",
+    "remark-gfm": "^3.0.1",
+    "remark-math": "^5.1.1",
     "resize-observer-polyfill": "^1.5.1",
-    "sass": "^1.55.0"
+    "sass": "^1.63.3",
+    "unist-util-visit": "^4.1.2"
   },
   "devDependencies": {
-    "eslint": "^8.24.0",
-    "eslint-config-prettier": "^8.5.0",
+    "eslint": "^8.42.0",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-config-react-app": "^7.0.1",
-    "eslint-plugin-mdx": "^2.0.5",
-    "prettier": "^2.7.1",
+    "eslint-plugin-mdx": "^2.1.0",
+    "prettier": "^2.8.8",
     "rimraf": "^5.0.1"
   },
   "volta": {
