--- a/package.json
+++ b/package.json
@@ -5,14 +5,14 @@
   "version": "0.1.0",
   "license": "0BSD",
   "scripts": {
-    "build": "gatsby build && yarn del-maps",
+    "build": "gatsby build",
     "dev": "gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1",
     "del-maps": "rimraf ./public/**.map",
-    "deploy": "netlify deploy --dir=public --prod",
+    "deploy": "yarn del-maps && netlify deploy --dir=public --prod",
     "lint": "eslint . --ext md,mdx",
     "prettier": "prettier --write ./content"
   },
@@ -52,7 +52,6 @@
     "prismjs": "^1.29.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-feather": "^2.0.10",
     "react-helmet": "^6.1.0",
     "react-use": "^17.4.0",
     "remark-gfm": "^3.0.1",
@@ -70,7 +69,6 @@
     "rimraf": "^5.0.1"
   },
   "volta": {
-    "node": "18.16.0",
-    "yarn": "1.22.19"
+    "node": "18.16.0"
   }
 }
