--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "url": "https://github.com/gatsbyjs/gatsby/issues"
   },
   "volta": {
-    "node": "14.18.3"
+    "node": "14.18.3",
+    "yarn": "1.22.22"
   }
 }
