--- a/.github/workflows/auto-deploy.yml
+++ b/.github/workflows/auto-deploy.yml
@@ -23,9 +23,14 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@master
 
+      # Installs specific version of Node.js
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 14
+
       # Runs a single command using the runners shell
       - name: Install all dependencies
-        run: yarn
+        run: yarn install --frozen-lockfile
 
       # Runs a single command using the runners shell
       - name: Run a build
